--- a/MidiGen/MidiGen.vcxproj.filters
+++ b/MidiGen/MidiGen.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sysexTest.cpp">
+    <ClCompile Include="MidiGen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
